# env-generator

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  rust-toolchain.toml  sample.env.yaml
content/: 20-general.yaml  90-spamassassin.yaml
scripts/: combine.sh
src/: arguments.rs  main.rs  variables.rs
